src/styles/global.css
:root {
    /* Colors */
    /* Light Theme Defaults */
    --dominant: #e5e1d1;
    --accent: #ab47bc;
    --opposite: #1a1b1e;
    --text: #231210;

    --dominant-dark: #b7b6a7;
    --dominant-light: #f2ece8;
    --dominant-lighter: #fdf4f8;

    --accent-dark: #890630;
    --accent-light: #dfb1ec;

    --split: #66c4a4;

    --muted: #fdfdfd;

    --empty: #000;
    --full: #fff;

    /* Text Sizes */
    --text-sm: 0.875rem;
    --text-base: 1rem;
    --text-md: 1.125rem;
    --text-lg: 1.25rem;
    --text-xl: 1.625rem;
    --text-2xl: 2.125rem;
    --text-3xl: 2.625rem;
    --text-4xl: 3.5rem;
    --text-5xl: 4.5rem;

    /* Fonts */
    --font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --font-body: 'Public Sans', var(--font-system);
    --font-brand: Rubik, var(--font-system);

    /* Transitions */
    --theme-transition: 0.2s ease-in-out;

    /* Border radius */
    --radius-lg: 24px;
}

:root.theme-dark {
    --dominant: #1a1b1e;
    --accent: #ffe189;
    --opposite: #e1dac6;
    --text: #eef7fc;

    --dominant-dark: #16171a;
    --dominant-light: #1e1f23;
    --dominant-lighter: #333;

    --accent-light: #fff9e6;
    --accent-dark: #ad8c29;

    --muted: #4d4d4d;

    --split: #a5f2f6;

    --empty: #fff;
    --full: #000;
}

body {
    background: var(--dominant);
    color: var(--text);
    font-size: 18px;
}

a {
    color: var(--accent);
}

.container {
    margin: 20rem auto 0;
    padding: 1rem 3rem 3rem;
    max-width: 1000px;
    line-height: var(--text-2xl);
    border-radius: var(--radius-lg);
}

.raise-1 {
    z-index: -4;
}

.raise {
    box-shadow: -20px -20px 60px var(--dominant-light),
    20px 20px 60px  var(--dominant-dark);
    backdrop-filter: blur(24px);
}

.press {
    box-shadow: inset 20px 20px 60px #c9c6b4,
    inset -20px -20px 60px #fffff4;
}

.concave {
    background: linear-gradient(145deg, #d4d2bf, #fdf9e3);
}

.convex {
    background: linear-gradient(145deg, #fdf9e3, #d4d2bf);
}

.circle {
    border-radius: 100%;
}

[x-cloak] { display: none !important; }

